--- a/index.html
+++ b/index.html
@@ -42,115 +42,110 @@ color:#ee1111
      <h1 class="hd">Terms and Conditions</h1>
 
   <h2>1. Introduction</h2>
-  <p>Provide an introduction to the terms and policies, outlining the purpose and scope of the document.</p>
-
-  <h2>2. Acceptance of Terms</h2>
-  <p>Explain that by using the mobile application and making in-app purchases, users agree to abide by the terms and policies.</p>
-
-  <h2>3. Privacy Policy</h2>
-  <p>Reference the privacy policy that outlines how user data is collected, used, and protected.</p>
-
-  <h2>4. In-App Purchases</h2>
-  <p>Explain the nature of in-app purchases available within the mobile application.</p>
-
-  <h2>5. Eligibility</h2>
-  <p>Specify the eligibility criteria for making in-app purchases, such as age restrictions or account requirements.</p>
-
-  <h2>6. User Account</h2>
-  <p>Explain the importance of creating and maintaining a user account for managing in-app purchases.</p>
-
-  <h2>7. Refunds and Cancellations</h2>
-  <p>Outline the refund and cancellation policy for in-app purchases, including any limitations or conditions.</p>
-
-  <h2>8. User Responsibilities</h2>
-  <p>Explain the responsibilities of users when making in-app purchases, such as providing accurate information and complying with applicable laws.</p>
-
-  <h2>9. Security</h2>
-  <p>Highlight the security measures in place to protect user data and payment information during in-app purchases.</p>
-
-  <h2>10. Pricing and Payment Terms</h2>
-  <p>Provide clear information about the pricing of in-app purchases, accepted payment methods, and any applicable taxes or fees.</p>
-
-  <h2>11. License and Usage Rights</h2>
-  <p>Clarify the license and usage rights granted to users upon making an in-app purchase, including any limitations or restrictions.</p>
-
-  <h2>12. Intellectual Property</h2>
-  <p>Specify the ownership and intellectual property rights of the application and its content, including purchased in-app content.</p>
-
-  <h2>13. Availability and Modifications</h2>
-  <p>Inform users that in-app purchases and associated features may be subject to availability and can be modified or discontinued.</p>
-
-  <h2>14. Dispute Resolution</h2>
-  <p>Provide information on the process for resolving disputes related to in-app purchases and encourage users to seek assistance for payment-related issues.</p>
-
-  <h2>15. Compliance with Laws</h2>
-  <p>Specify that users are responsible for complying with all applicable laws and regulations related to in-app purchases and payments.</p>
-
-  <h2>16. Governing Law and Jurisdiction</h2>
-  <p>Identify the governing law and jurisdiction for any disputes or legal matters related to the terms and policies.</p>
-
-  <h2>17. Amendments and Updates</h2>
-  <p>State that the terms and policies may be updated or modified and provide a mechanism for notifying users of changes.</p>
-
-
-     <h1 class="hd">Privacy Policy</h1>
-  <p>Last updated: [Date]</p>
-  <p>This Privacy Policy explains how we collect, use, and disclose information collected from users of our mobile application. By using our application, you agree to the collection and use of your information as described in this Privacy Policy.</p>
-
-  <h2>1. Information We Collect</h2>
-  <ol>
-    <li>
-      <h3>1.1. Personal Information:</h3>
-      <p>We may collect personal information such as your name, email address, phone number, and demographic information when you register an account with us or provide this information voluntarily.</p>
-    </li>
-    <li>
-      <h3>1.2. Location Information:</h3>
-      <p>With your consent, we may collect your precise location information to provide you with relevant search results, nearby medical centers, and doctors.</p>
-    </li>
-    <li>
-      <h3>1.3. Usage Information:</h3>
-      <p>We may collect information about how you use our application, including the pages you visit, the features you interact with, and the actions you take. This information helps us improve our services and provide a better user experience.</p>
-    </li>
-    <li>
-      <h3>1.4. Device Information:</h3>
-      <p>We may collect information about the device you use to access our application, including the device type, operating system version, unique device identifiers, and mobile network information.</p>
-    </li>
-  </ol>
-
-  <h2>2. Use of Collected Information</h2>
-  <ol>
-    <li>
-      <h3>2.1. Personalization:</h3>
-      <p>We may use the collected information to personalize your experience, provide tailored recommendations, and improve our services.</p>
-    </li>
-    <li>
-      <h3>2.2. Communication:</h3>
-      <p>We may use your contact information to communicate with you regarding your account, appointments, service updates, and promotional offers. You can opt-out of receiving promotional communications at any time.</p>
-    </li>
-    <li>
-      <h3>2.3. Analytics and Improvements:</h3>
-      <p>We may use the collected information for analytics purposes to analyze user behavior, track trends, and improve our application's functionality and performance.</p>
-    </li>
-    <li>
-      <h3>2.4. Legal Requirements:</h3>
-      <p>We may use or disclose your information if required by law, regulation, legal process, or governmental request.</p>
-    </li>
-  </ol>
-
-  <h2>3. Data Security</h2>
-  <p>We take reasonable measures to protect the information we collect from unauthorized access, disclosure, alteration, or destruction. However, no data transmission or storage system can be guaranteed to be 100% secure.</p>
-
-  <h2>4. Third-Party Services</h2>
-  <p>We may integrate third-party services, such as payment gateways, within our application. These services have their own privacy policies, and we recommend reviewing them to understand how they collect, use, and disclose your information.</p>
-
-  <h2>5. Data Retention</h2>
-  <p>We retain your information for as long as necessary to fulfill the purposes outlined in this Privacy Policy, unless a longer retention period is required or permitted by law.</p>
-
-  <h2>6. Children's Privacy</h2>
-  <p>Our application is not intended for use by individuals under the age of 13. We do not knowingly collect personal information from children. If we become aware that we have collected personal information from a child without parental consent, we will take steps to remove that information.</p>
-
-  <h2>7. Changes to this Privacy Policy</h2>
-  <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the updated Privacy Policy within our application. It is your responsibility to review the Privacy Policy periodically for any changes.</p>
+<p>Welcome to Medanit Medical directory. Our mobile application provides a comprehensive directory of medical centers and doctors, helping users find the healthcare services they need. The following terms and policies outline the rules and guidelines for using our application.</p>
+<h2>2. Acceptance of Terms</h2>
+<p>By using our mobile application and making in-app purchases, you agree to abide by the terms and policies outlined herein. If you do not agree with any of these terms, please refrain from using our application.</p>
+<h2>3. Privacy Policy</h2>
+<p>We respect your privacy and are committed to protecting your personal information. Our privacy policy explains how we collect, use, and disclose information collected from users. By using our application, you consent to the collection and use of your information as described in our privacy policy.</p>
+<h2>4. In-App Purchases</h2>
+<p>Our mobile application offers in-app purchases that provide additional features and content. These purchases are made through secure payment gateways and are subject to the terms and conditions set by the respective payment providers.</p>
+<h2>5. Eligibility</h2>
+<p>To make in-app purchases, you must meet the eligibility criteria specified in our application. This may include being of a certain age or having a valid user account.</p>
+<h2>6. User Account</h2>
+<p>Creating and maintaining a user account is important for managing your in-app purchases. Your account allows you to access and restore your purchased content across multiple devices.</p>
+<h2>7. Refunds and Cancellations</h2>
+<p>We have a refund and cancellation policy in place for in-app purchases. If you encounter any issues or wish to request a refund, please follow the guidelines outlined in our refund policy.</p>
+<h2>8. User Responsibilities</h2>
+<p>As a user making in-app purchases, it is your responsibility to provide accurate and up-to-date information. You should also comply with all applicable laws and regulations while using our application.</p>
+<h2>9. Security</h2>
+<p>We take the security of your data seriously. We have implemented various measures to protect your information during in-app purchases, including encryption and secure payment gateways. However, please note that no system can guarantee 100% security.</p>
+<h2>10. Pricing and Payment Terms</h2>
+<p>Clear information regarding the pricing of in-app purchases, accepted payment methods, and any applicable taxes or fees will be provided within the application before you make a purchase.</p>
+<h2>11. License and Usage Rights</h2>
+<p>Upon making an in-app purchase, you are granted a non-transferable license to access and use the purchased content within the application. However, this license may be subject to certain limitations or restrictions as outlined in the specific terms of the purchased content.</p>
+<h2>12. Intellectual Property</h2>
+<p>All intellectual property rights, including ownership and copyrights, associated with our application and its content, including purchased in-app content, belong to Medanit Medical directory or its licensors. Unauthorized use or distribution of the content is strictly prohibited.</p>
+<h2>13. Availability and Modifications</h2>
+<p>In-app purchases and associated features may be subject to availability and can be modified, updated, or discontinued at our discretion. We will make reasonable efforts to notify users of any significant changes or disruptions.</p>
+<h2>14. Dispute Resolution</h2>
+<p>If you have any disputes or issues related to in-app purchases, we encourage you to contact our support team for assistance. We will work towards resolving the matter promptly and amicably.</p>
+<h2>15. Compliance with Laws</h2>
+<p>You are responsible for complying with all applicable laws and regulations regarding in-app purchases and payments. Any misuse or fraudulent activity may result in the termination of your account and legal consequences.</p>
+<h2>16. Governing Law and Jurisdiction</h2>
+<p>Any disputes or legal matters arising from the terms and policies of our application will be governed by the laws of [Jurisdiction]. Any legal actions or proceedings shall be exclusively brought in the courts of [Jurisdiction].</p>
+<h2>17. Amendments and Updates</h2>
+<p>We reserve the right to update or modify the terms and policies of our application. Any changes will be notified to users through the application or other appropriate means. By continuing to use our application, you agree to be bound by the updated terms and policies.</p>
+<h1 class="hd">Privacy Policy</h1>
+<p>Last updated: [Date]</p>
+<p>This Privacy Policy explains how we collect, use, and disclose information collected from users of our mobile application. By using our application, you agree to the collection and use of your information as described in this Privacy Policy.</p>
+<h2>1. Information We Collect</h2>
+<ol>
+  <li>
+    <h3>1.1. Personal Information:</h3>
+    <p>We may collect personal information such as your name, email address, phone number, and demographic information when you register an account with us or provide this information voluntarily.</p>
+  </li>
+  <li>
+    <h3>1.2. Location Information:</h3>
+    <p>With your consent, we may collect your precise location information to provide you with relevant search results, nearby medical centers, and doctors.</p>
+  </li>
+  <li>
+    <h3>1.3. Usage Information:</h3>
+    <p>We may collect information about how you use our application, including the pages you visit, the features you interact with, and the actions you take. This information helps us improve our services and provide a better user experience.</p>
+  </li>
+  <li>
+    <h3>1.4. Device Information:</h3>
+    <p>We may collect information about the device you use to access our application, including the device type, operating system version, unique device identifiers, and mobile network information.</p>
+  </li>
+</ol>
+<h2>2. Use of Collected Information</h2>
+<ol>
+  <li>
+    <h3>2.1. Personalization:</h3>
+    <p>We may use the collected information to personalize your experience, provide tailored recommendations, and improve our services.</p>
+  </li>
+  <li>
+    <h3>2.2. Communication:</h3>
+    <p>We may use your contact information to communicate with you regarding your account, appointments, service updates, and promotional offers. You can opt-out of receiving promotional communications at any time.</p>
+  </li>
+  <li>
+    <h3>2.3. Analytics and Improvements:</h3>
+    <p>We may use the collected information for analytics purposes to analyze user behavior, track trends, and improve our application's functionality and performance.</p>
+  </li>
+  <li>
+    <h3>2.4. Legal Requirements:</h3>
+    <p>We may use or disclose your information if required by law, regulation, legal process, or governmental request.</p>
+  </li>
+</ol>
+<h2>3. Data Sharing and Disclosure</h2>
+<p>We may share or disclose your information in the following circumstances:</p>
+<ol>
+  <li>
+    <h3>3.1. Service Providers:</h3>
+    <p>We may engage trusted third-party service providers to perform functions and process information on our behalf. These providers have access to your information only to perform tasks on our behalf and are obligated to maintain its confidentiality.</p>
+  </li>
+  <li>
+    <h3>3.2. Legal Compliance:</h3>
+    <p>We may share or disclose your information if we believe it is necessary to comply with applicable laws, regulations, legal process, or governmental requests.</p>
+  </li>
+  <li>
+    <h3>3.3. Business Transfers:</h3>
+    <p>In the event of a merger, acquisition, or sale of all or a portion of our assets, your information may be transferred as part of the transaction. We will notify you of any such change in ownership or control of your information.</p>
+  </li>
+  <li>
+    <h3>3.4. Consent:</h3>
+    <p>We may share your information with your consent or at your direction.</p>
+  </li>
+</ol>
+<h2>4. Data Retention</h2>
+<p>We retain your information for as long as necessary to fulfill the purposes outlined in this Privacy Policy, unless a longer retention period is required or permitted by law.</p>
+<h2>5. Security</h2>
+<p>We take reasonable measures to protect your information from unauthorized access, disclosure, alteration, or destruction. However, no data transmission over the internet or electronic storage method is 100% secure, and we cannot guarantee absolute security.</p>
+<h2>6. Children's Privacy</h2>
+<p>Our application is not intended for children under the age of 13. We do not knowingly collect personal information from children under 13. If you believe we have collected information from a child under 13, please contact us to have the information removed.</p>
+<h2>7. Third-Party Links and Services</h2>
+<p>Our application may contain links to third-party websites or services. We are not responsible for the privacy practices or content of such third parties. We encourage you to review the privacy policies of those third parties before providing any personal information.</p>
+<h2>8. Changes to this Privacy Policy</h2>
+<p>We may update or modify this Privacy Policy from time to time. Any changes will be posted within our application, and the "Last Updated" date at the top of the policy will be revised. By continuing to use our application after the changes are made, you accept the revised Privacy Policy.</p>
 
   </div>
 </body>
